--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,17 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
+    "@mui/x-data-grid": "^6.18.3",
     "axios": "^1.6.0",
+    "js-cookie": "^3.0.5",
+    "localforage": "^1.10.0",
+    "luxon": "^3.4.4",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
