--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,10 @@
     "luxon": "^3.4.4",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.17.0",
     "sort-by": "^1.2.0"
   },
